--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
